Fix iOS /apply horizontal scrolling and checkboxes

--- a/src/routes/global.css
+++ b/src/routes/global.css
@@ -60,7 +60,9 @@ input {
 input[type='checkbox'],
 input[type='radio'] {
 	height: 1.5rem;
+	min-height: 1.5rem;
 	width: 1.5rem;
+	min-width: 1.5rem;
 	margin: 0;
 	margin-right: 1rem;
 }
@@ -98,6 +100,9 @@ select {
 	height: 2.5rem;
 	padding-left: 0.5rem;
 	border: 2px solid gray;
+	/* for some reason overflowing text causes horizontal scrolling */
+	overflow: hidden;
+	text-overflow: ellipsis;
 }
 
 input[type='file'] {
